Added responsive CSS design for portrait screen resolutions.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
   <img src="translator-man.png" alt="" height="300px">
   <div class="textfield-group">
-    <div>
+    <div class="input-group">
       <div class="options-group">
         <p class="header-text">From:</p>
   
@@ -34,7 +34,7 @@
     
     <img src="swap.png" id="swap-button" onclick="swapInputOutput()"/>
     
-    <div>
+    <div class="input-group">
       <div class="options-group">
         <p class="header-text">To:</p>
 
